--- a/views/doctor.jade
+++ b/views/doctor.jade
@@ -76,6 +76,13 @@ html.
                                 <span class="input-group-addon"></span>
                             </div>
                         </div>
+                        <div class="form-group">
+                             <label for="assetID">Asset ID</label>
+                             <div class="input-group">
+                                 <input type="text" class="form-control" id="assetID" name="assetID" placeholder="Enter Asset ID" required>
+                                 <span class="input-group-addon"><span class="glyphicon glyphicon-asterisk"></span></span>
+                             </div>
+                         </div>
                         <div class="dropdown">
                             <div class="input-group">
                                 <label for="nameOfMedication">Name of Medication</label>
