add new routes for form actions

--- a/views/doctor.jade
+++ b/views/doctor.jade
@@ -36,7 +36,7 @@ html.
           <!-- action= the url where python is listening -->
           <!-- This will send the stuff to Django -->
           <!-- Get python to listen on 127.0.0.1:8000/transaction -->
-              <form role="form" method="POST" action="/transaction">
+              <form role="form" method="post" action="/doctor/send">
                   <div class="col-lg-6">
                       <div class="form-group">
                           <label for="patientName">Patient Name</label>
