--- a/views/pharmacy.jade
+++ b/views/pharmacy.jade
@@ -33,7 +33,7 @@ html.
          </div>
          <div class="container">
              <div class="row">
-                 <form role="form">
+                 <form role="form" method="post" action="/pharmacy/send">
                      <div class="col-lg-6">
                          <div class="form-group">
                              <label for="patientName">Patient Name</label></br>
