fix pharmacy post button

--- a/views/pharmacy.jade
+++ b/views/pharmacy.jade
@@ -33,7 +33,7 @@ html.
          </div>
          <div class="container">
              <div class="row">
-                 <form role="form" method="get" action="/pharmacy/send">
+                 <form method="get" action="/pharmacy/send">
                      <div class="col-lg-6">
                          <div class="form-group">
                              <label for="patientName">Patient Name</label></br>
@@ -88,7 +88,7 @@ html.
                              </div>
                          </div>
 
-                         <input type="submit" name="getPatient" id="getPatient" value="Get Patient" class="btn btn-info pull-right">
+                         <input type="submit" value="Get Patient" class="btn btn-info pull-right">
                      </div>
                  </form>
                  </div>
