--- a/views/patient.jade
+++ b/views/patient.jade
@@ -199,7 +199,6 @@ html.
     <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.11.2.min.js"><\/script>')</script>
         <script src="js/vendor/bootstrap.min.js"></script>
         <link rel="stylesheet" href="./css/main.css">
-        <script src="js/vendor/jsrender.min.js"></script>
-        <script src="js/main.js"></script>
-    <script src="js/pharmacist.js"></script>
+        <script src="/javascripts/jsrender.min.js"></script>
+    <script src="/javascripts/pharmacist.js"></script>
 </body>
