--- a/views/doctor-sent.jade
+++ b/views/doctor-sent.jade
@@ -1,8 +1,7 @@
-<html>
-	<head>
-		<meta charset="utf-8">
-	</head>
-	<body>
-		<p>Transaction from doctor to patient complete.</p>
-	</body>
-</html>
+doctype html
+html.
+    <head><meta charset="utf-8">
+    </head>
+    <body>
+        <p>Transaction from doctor to patient complete.</p>
+    </body>
