--- a/views/patient-sent.jade
+++ b/views/patient-sent.jade
@@ -4,5 +4,5 @@ html.
 		<meta charset="utf-8">
 	</head>
 	<body>
-		<p>Transaction from pharmacist to doctor complete.</p>
+		<p>Transaction from patient to pharmacist complete.</p>
 	</body>
