fix spaces and tabs

--- a/views/doctor-sent.jade
+++ b/views/doctor-sent.jade
@@ -5,3 +5,4 @@ html.
     <body>
         <p>Transaction from doctor to patient complete.</p>
     </body>
+    <a href="/patient">Go to patient's view</a>
