--- a/views/pharmacy-sent.jade
+++ b/views/pharmacy-sent.jade
@@ -1,8 +1,9 @@
 doctype html
 html.
-	<head>
-		<meta charset="utf-8">
-	</head>
-	<body>
-		<p>Transaction from pharmacist to doctor complete.</p>
-	</body>
+    <head>
+        <meta charset="utf-8">
+    </head>
+    <body>
+        <p>Transaction from pharmacist to doctor complete.</p>
+    </body>
+    <a href="/doctor">Go to Doctor's view</a>
