hard coded values

--- a/views/doctor.jade
+++ b/views/doctor.jade
@@ -40,38 +40,78 @@ html.
                   <div class="col-lg-6">
                       <div class="form-group">
                           <label for="patientName">Patient Name</label>
+                          <select>
+                            <option>Jeff Stevenson</option>
+                            <option>Maria Smith</option>
+                            <option>John Hollingsworth</option>
+                            <option>Jason Kelly</option>
+                          </select>
+                          <!--
                           <div class="input-group">
                               <input type="text" class="form-control" name="inputPatientName" id="patientName" placeholder="Enter patient's name" required>
                               <span class="input-group-addon"></span>
                           </div>
+                        -->
                       </div>
                       <div class="form-group">
                           <label for="patientAddress">Patient Address</label>
+                          <select>
+                                <option>32 Strand Road, Galway</option>
+                                <option>123 Fake St, Dublin</option>
+                                <option>65 Mount Pleasant Road, Rathmines, Dublin 6</option>
+                                <option>99 Constitution Hill, Dublin 1</option>
+                            </select>
+                          <!--
                           <div class="input-group">
                               <input type="text" class="form-control" id="inputPatientAddress" name="patientAddress" placeholder="Enter patient's address" required>
                               <span class="input-group-addon"></span>
                           </div>
+                        -->
                       </div>
                       <div class="form-group">
                           <label for="docMedRedNo">Doctor Medical Registration Number</label>
+                          <select>
+                                <option>024489984</option>
+                                <option>129889495</option>
+                                <option>789564652</option>
+                                <option>654231546</option>
+                            </select>
+                          <!--
                           <div class="input-group">
                               <input type="text" class="form-control" id="docMedRedNo" name="docMedRedNo" placeholder="Enter medical registration number" required>
                               <span class="input-group-addon"></span>
                           </div>
+                        -->
                       </div>
                       <div class="form-group">
                           <label for="doctorAddress">Doctor Address</label>
+                            <select>
+                              <option>42 Glenside Avenue, Terenure, Dublin 6W</option>
+                              <option>63 Templeogue Road, Templogue, Dublin 6W</option>
+                              <option>12 Coolamber Park, Knocklyon, Dublin 16</option>
+                              <option>76 Ballinteer Grove, Ballinteer, Dublin 14</option>
+                            </select>
+                          <!--
                           <div class="input-group">
                               <input type="text" class="form-control" id="doctorAddress" name="doctorAddress" placeholder="Enter doctor's address">
                               <span class="input-group-addon"></span>
                           </div>
+                        -->
                       </div>
                       <div class="form-group">
                           <label for="patientPrivateKey">Patient's Private Key</label>
+                          <select>
+                            <option></option>
+                            <option></option>
+                            <option></option>
+                            <option></option>
+                          </select>
+                          <!--
                           <div class="input-group">
                               <input type="text" class="form-control" id="patientKey" name="patientKey" placeholder="Enter private key" required>
                               <span class="input-group-addon"></span>
                           </div>
+                        -->
                       </div>
                       <div class="form-group">
                           <label for="prescriptionDate">Date of Prescription</label>
