removed unused fields

--- a/views/doctor.jade
+++ b/views/doctor.jade
@@ -99,34 +99,12 @@ html.
                         -->
                       </div>
                       <div class="form-group">
-                          <label for="patientPrivateKey">Patient's Private Key</label>
-                          <select>
-                            <option></option>
-                            <option></option>
-                            <option></option>
-                            <option></option>
-                          </select>
-                          <!--
-                          <div class="input-group">
-                              <input type="text" class="form-control" id="patientKey" name="patientKey" placeholder="Enter private key" required>
-                              <span class="input-group-addon"></span>
-                          </div>
-                        -->
-                      </div>
-                      <div class="form-group">
                           <label for="prescriptionDate">Date of Prescription</label>
                           <div class="input-group">
-                              <input type="text" class="form-control" id="prescriptionDate" name="prescriptionDate" placeholder="Enter date of prescription" required>
+                              <input type="text" class="form-control" id="prescriptionDate" name="prescriptionDate" placeholder="Enter date of prescription" value="2015-11-08" required>
                               <span class="input-group-addon"></span>
                           </div>
                       </div>
-                      <div class="form-group">
-                             <label for="assetID">Asset ID</label>
-                             <div class="input-group">
-                                 <input type="text" class="form-control" id="assetID" name="assetID" placeholder="Enter Asset ID" required>
-                                 <span class="input-group-addon"><span class="glyphicon glyphicon-asterisk"></span></span>
-                             </div>
-                         </div>
                       <div class="dropdown">
                           <div class="input-group">
                               <label for="nameOfMedication">Name of Medication</label>
