--- a/views/pharmacy.jade
+++ b/views/pharmacy.jade
@@ -80,15 +80,8 @@ html.
                              </div>
                          -->
                          </div>
-                         <div class="form-group">
-                             <label for="assetID">Asset ID</label></br>
-                             <div class="input-group">
-                                 <input type="text" class="form-control" id="assetID" name="assetID" placeholder="Enter Asset ID" required>
-                                 <span class="input-group-addon"><span class="glyphicon glyphicon-asterisk"></span></span>
-                             </div>
-                         </div>
 
-                         <input type="submit" value="Get Patient" class="btn btn-info pull-right">
+                         <input type="submit" value="Confirm patient purchase" class="btn btn-info pull-right">
                      </div>
                  </form>
                  </div>
