--- a/views/doctor.jade
+++ b/views/doctor.jade
@@ -126,7 +126,7 @@ html.
                           </div>
                       </div>
                       
-                      <input type="submit" name="submit" id="submit" value="Submit" class="btn btn-info pull-right">
+                      <input type="submit" name="submit" id="submit" value="Dispense to patient" class="btn btn-info pull-right">
                   </div>
               </form>
           </div>
