--- a/views/index.jade
+++ b/views/index.jade
@@ -1,4 +1,4 @@
-  doctype html
+doctype html
 html.
     <head>
         <meta charset="utf-8">
@@ -25,7 +25,7 @@ html.
           </p>
         </div>
         <div class="container">
-          <p>Prescripchain aims to reduce ‘Doctor Shopping’ by leveraging blockchain technology to create smart medical prescriptions. ‘Colouring Coins’ allows us to create digital assets that contain a patient's prescription. The coin’s journey from Doctor to Patient to Pharmacy gives greater visibility to pharmacists and prevents a patient from abusing the lack of communication channels between doctors.
+          <p>Prescripchain aims to reduce ‘Doctor Shopping’ by leveraging blockchain technology to create smart medical prescriptions. ‘Coloured Coins’ allows us to create digital assets that contain a patient's prescription. The coin’s journey from Doctor to Patient to Pharmacy gives greater visibility to pharmacists and prevents a patient from abusing the lack of communication channels between doctors.
           </p>
         </div>
     ​
