fixed dropdown formatting

--- a/views/doctor.jade
+++ b/views/doctor.jade
@@ -40,7 +40,7 @@ html.
                   <div class="col-lg-6">
                       <div class="form-group">
                           <label for="patientName">Patient Name</label>
-                          <select>
+                          <select class="form-control">
                             <option>Jeff Stevenson</option>
                             <option>Maria Smith</option>
                             <option>John Hollingsworth</option>
@@ -55,7 +55,7 @@ html.
                       </div>
                       <div class="form-group">
                           <label for="patientAddress">Patient Address</label>
-                          <select>
+                          <select class="form-control">
                                 <option>32 Strand Road, Galway</option>
                                 <option>123 Fake St, Dublin</option>
                                 <option>65 Mount Pleasant Road, Rathmines, Dublin 6</option>
@@ -70,7 +70,7 @@ html.
                       </div>
                       <div class="form-group">
                           <label for="docMedRedNo">Doctor Medical Registration Number</label>
-                          <select>
+                          <select class="form-control">
                                 <option>024489984</option>
                                 <option>129889495</option>
                                 <option>789564652</option>
@@ -85,7 +85,7 @@ html.
                       </div>
                       <div class="form-group">
                           <label for="doctorAddress">Doctor Address</label>
-                            <select>
+                            <select class="form-control">
                               <option>42 Glenside Avenue, Terenure, Dublin 6W</option>
                               <option>63 Templeogue Road, Templogue, Dublin 6W</option>
                               <option>12 Coolamber Park, Knocklyon, Dublin 16</option>
