--- a/views/pharmacy.jade
+++ b/views/pharmacy.jade
@@ -37,7 +37,7 @@ html.
                      <div class="col-lg-6">
                          <div class="form-group">
                              <label for="patientName">Patient Name</label></br>
-                             <select>
+                             <select class="form-control">
                                 <option>Jeff Stevenson</option>
                                 <option>Maria Smith</option>
                                 <option>John Hollingsworth</option>
@@ -52,7 +52,7 @@ html.
                          </div>
                          <div class="form-group">
                              <label for="patientDob">Patient DOB</label></br>
-                             <select>
+                             <select class="form-control">
                                 <option>23/09/1956</option>
                                 <option>14/12/1986</option>
                                 <option>01/02/1979</option>
@@ -67,7 +67,7 @@ html.
                          </div>
                          <div class="form-group">
                             <label for="patientAddress">Patient Address</label></br>
-                            <select>
+                            <select class="form-control">
                                 <option>32 Strand Road, Galway</option>
                                 <option>123 Fake St, Dublin</option>
                                 <option>65 Mount Pleasant Road, Rathmines, Dublin 6</option>
