--- a/views/index.jade
+++ b/views/index.jade
@@ -40,7 +40,7 @@ html.
             <div class="col-md-6">
               <h2>Pharmacist</h2>
               <p>Prescripchain provides pharmacists with a secure and accurate way to check a patient's prescription transaction history and ensure that they are receiving the medication that they need. </p>
-              <p><a class="btn btn-primary btn-sm" href="/pharmacist" role="button">Pharmacist Login</a></p>
+              <p><a class="btn btn-primary btn-sm" href="/pharmacy" role="button">Pharmacist Login</a></p>
            </div>
           </div>
         <hr>
